feat: Türkçe sözdizimiyle Python yazma desteği eklendi

--- a/etc/trpy.1
+++ b/etc/trpy.1
@@ -1,14 +1,14 @@
-.TH PYGYAT 1
+.TH trpy 1
 .SH NAME
-PyGyat \- Python with rizz.
+trpy \- Python with Turkish syntax.
 .SH SYNOPSIS
-.B pygyat
+.B trpy
 [\fIFLAGS\fR]
 .IR scriptfile
 .IR args ...
 .SH DESCRIPTION
-.B pygyat
-is a python preprosessor which translates python code into brainrot.
+.B trpy
+is a python preprosessor which translates python code into Turkish language.
 .SH OPTIONS
 .TP
 .BR \-h ", " \-\-help
@@ -33,14 +33,14 @@ Use Python 2 to run the generated files instead of Python 3 (default).
 .BR \-o ", " \-\-output
 Specify the name of output file (valid only if -c is present, throws an error if -c is not present).
 .SH SEE ALSO
-py2gyat(1)
+py2trpy(1)
 .SH AUTHOR
-Shamith Pasula 2024
+Ali Can Gündüz 2025
 .SH LICENSE
 This program is licensed under the MIT license. See [1] for details. TL;DR: Do whatever you want as long as you include the original copyright and license notice.
 .TP
 [1]
-https://github.com/shamith09/pygyat/blob/master/LICENSE
+https://github.com/shamith09/trpy/blob/master/LICENSE
 
 
 
