--- a/etc/trpy2py.1
+++ b/etc/trpy2py.1
@@ -1,22 +1,22 @@
-.TH PYGYAT 1
+.TH trpy 1
 .SH NAME
-by2py \- Translate pygyat files to python
+by2py \- Translate trpy files to python
 .SH SYNOPSIS
-.B gyat2py
+.B trpy2py
 [\fIFLAGS\fR]
 .IR scriptfile
 .SH DESCRIPTION
-.B gyat2py
-is an alias for 'pygyat -c'. For more information, look up the manual for pygyat(1).
+.B trpy2py
+is an alias for 'trpy -c'. For more information, look up the manual for trpy(1).
 .SH SEE ALSO
-pygyat(1)
+trpy(1)
 .SH AUTHOR
-Shamith Pasula 2024
+Ali Can Gündüz 2025
 .SH LICENSE
 This program is licensed under the MIT license. See [1] for details. TL;DR: Do whatever you want as long as you include the original copyright and license notice.
 .TP
 [1]
-https://github.com/shamith09/pygyat/blob/master/LICENSE
+https://github.com/al1can/trpy/blob/master/LICENSE
 
 
 
